# python-learning-projects

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
projects/01_individus_json/: README.md  main.py
src/python_learning_projects/: __init__.py
